<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:durationpref="http://schema.durationpref.org"
    >
    <PreferenceCategory android:title="Image display">
        <CheckBoxPreference
            android:key="act_on_sleep"
            android:title="@string/act_on_sleep_title"
            android:defaultValue="on"
            android:summaryOff="@string/act_on_sleep_summary_off"
            android:summaryOn="@string/act_on_sleep_summary_on"
            />
        <CheckBoxPreference
            android:key="act_on_shutdown"
            android:title="@string/act_on_shutdown_title"
            android:defaultValue="off"
            android:summaryOff="@string/act_on_shutdown_summary_off"
            android:summaryOn="@string/act_on_shutdown_summary_on"
            />
        <EditTextPreference
            android:key="sync_url"
            android:title="@string/sync_url_title"
            android:defaultValue="http://time.is/just"
            android:ellipsize="middle"
            android:inputType="textUri"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textIsSelectable="true"
            />
        <CheckBoxPreference
            android:key="enable_javascript"
            android:title="@string/enable_javascript_title"
            android:defaultValue="on"
            android:summaryOff="@string/enable_javascript_summary_off"
            android:summaryOn="@string/enable_javascript_summary_on"
            />
        <ListPreference
            android:key="image_orientation"
            android:title="@string/orientation_title"
            android:entries="@array/orientation_entries"
            android:entryValues="@array/orientation_entry_values"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="waveform_mode"
            android:title="@string/waveform_mode_title"
            android:entries="@array/waveform_mode_entries"
            android:entryValues="@array/waveform_mode_entry_values"
            android:defaultValue="MODE_GC16"
            />
        <CheckBoxPreference
            android:key="modify_system"
            android:title="@string/modify_system_title"
            android:defaultValue="off"
            android:summaryOff="@string/modify_system_summary_off"
            android:summaryOn="@string/modify_system_summary_on"
            />
        <ListPreference
            android:key="transition_image"
            android:title="@string/transition_image_title"
            android:entries="@array/transition_image_entries"
            android:entryValues="@array/transition_image_entry_values"
            android:defaultValue="blank_0"
            android:dependency="modify_system"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="Connectivity">
        <CheckBoxPreference
            android:key="enable_wifi"
            android:title="@string/enable_wifi_title"
            android:defaultValue="true"
            android:summaryOn="@string/enable_wifi_summary_on"
            android:summaryOff="@string/enable_wifi_summary_off"
            />
        <org.simulpiscator.billboardolino.DurationPreference
            android:key="connectivity_timeout"
            android:title="@string/connectivity_timeout_title"
            durationpref:maxValue="3599"
            android:defaultValue="20"
            android:dialogLayout="@layout/pref_dialog_duration"
            android:positiveButtonText="@android:string/ok"
            android:negativeButtonText="@android:string/cancel"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="Synchronization">
        <Preference
            android:key="sync_now"
            android:title="@string/sync_now_title"
            android:summary="@string/sync_now_summary"
            android:persistent="false"
            />
        <CheckBoxPreference
            android:key="sync_auto"
            android:title="@string/sync_auto_title"
            android:defaultValue="false"
            />
        <org.simulpiscator.billboardolino.DateTimePreference
            android:key="sync_offset"
            android:title="@string/sync_offset_title"
            android:dialogLayout="@layout/pref_dialog_datetime"
            android:positiveButtonText="@android:string/ok"
            android:negativeButtonText="@android:string/cancel"
            android:dependency="sync_auto"
            />
        <org.simulpiscator.billboardolino.DurationPreference
            android:key="sync_interval"
            android:title="@string/sync_interval_title"
            android:defaultValue="3600"
            android:dialogLayout="@layout/pref_dialog_duration"
            android:positiveButtonText="@android:string/ok"
            android:negativeButtonText="@android:string/cancel"
            android:dependency="sync_auto"
            />
        <ListPreference
            android:key="alarm_type"
            android:title="@string/alarm_type_title"
            android:entries="@array/alarm_type_entries"
            android:entryValues="@array/alarm_type_entry_values"
            android:defaultValue="4"
            android:dependency="sync_auto"
            />
    </PreferenceCategory>
</PreferenceScreen>